(add) start script

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "An express based api for controlling a Denon receiver",
   "main": "index.js",
   "scripts": {
+    "start": "node server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
