--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "restful-denon",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "An express based api for controlling a Denon receiver",
-  "main": "index.js",
+  "main": "server/index.js",
   "scripts": {
-    "start": "node server",
+    "start": "nodemon server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -23,6 +23,7 @@
     "babel-eslint": "^8.2.2",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.10.0"
+    "eslint-plugin-import": "^2.10.0",
+    "nodemon": "^1.17.3"
   }
 }
